[fix] Resolve text-box content overflowing issue in full-view mode (#2734)

--- a/aim/web/ui/src/modules/BaseExplorer/components/BoxWrapper/BoxWrapper.scss
+++ b/aim/web/ui/src/modules/BaseExplorer/components/BoxWrapper/BoxWrapper.scss
@@ -36,7 +36,6 @@
       margin: 0 auto;
     }
   }
-
   &__fullViewContent {
     width: 100%;
     height: 100%;
@@ -44,10 +43,12 @@
     align-items: center;
     background-color: $cuddle-10;
     position: relative;
-    overflow: auto;
+    overflow: hidden;
+    padding: 2rem 0.5rem;
     &__box {
-      display: inline-flex;
+      max-height: 100%;
       margin: 0 auto;
+      overflow: auto;
     }
     &__depthSlider {
       position: absolute;
